--- a/.github/workflows/argocd-setup.yaml
+++ b/.github/workflows/argocd-setup.yaml
@@ -2,10 +2,10 @@ name: "Step 2: ArgoCD Bootstrapping"
 
 on:
   workflow_dispatch:
-  # push:
-  #   branches: [ master ]
-  #   paths:
-  #     - ".github/workflows/argocd-setup.yaml"
+  push:
+    branches: [ master ]
+    paths:
+      - ".github/workflows/argocd-setup.yaml"
 
 jobs:
   setup-argocd:
