--- a/.github/workflows/argocd-setup.yaml
+++ b/.github/workflows/argocd-setup.yaml
@@ -24,21 +24,22 @@ jobs:
         with:
           host: ${{ secrets.PROXMOX_VM_TAILSCALE_IP }}
           username: ${{ secrets.USERNAME }}
-          # 🚨 중요: bootstrap.yml의 Phase 2에서 등록한 전용 키를 사용해야 합니다.
-          key: ${{ secrets.SSH_USERNAME_PRIVATE_KEY }} 
+          key: ${{ secrets.SSH_USERNAME_PRIVATE_KEY }} # Phase 2 전용 키
           script: |
             set -e
-            # bootstrap.yml에서 설정한 KUBECONFIG 경로를 명시합니다.
-            export KUBECONFIG=$HOME/.kube/config
+            export KUBECONFIG=$HOME/.kube/config #
 
-            # 1. ArgoCD 설치
+            # 1. ArgoCD 설치 (Server-Side Apply로 주석 크기 제한 우회)
             echo "🚀 Installing ArgoCD..."
             kubectl create namespace argocd || true
-            kubectl apply --server-side --force-conflicts -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
+            kubectl apply --server-side --force-conflicts -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml #
 
-            # 2. ArgoCD 대기 (Ready 상태 확인)
-            echo "⏳ Waiting for ArgoCD components..."
-            kubectl wait --for=condition=Ready pod -l app.kubernetes.io/part-of=argocd -n argocd --timeout=300s
+            # 2. ArgoCD 파드 생성 및 준비 대기
+            echo "⏳ Waiting for pods to be created..."
+            sleep 20 # 컨트롤러가 파드를 생성할 시간 확보
+            
+            echo "⏳ Waiting for ArgoCD components to be Ready..."
+            kubectl wait --for=condition=Ready pod -l app.kubernetes.io/part-of=argocd -n argocd --timeout=300s #
 
             # 3. Grafana Secret 주입 (Monitoring 네임스페이스)
             echo "🔐 Injecting Grafana Credentials..."
@@ -46,14 +47,14 @@ jobs:
             kubectl create secret generic grafana-admin-credentials \
               --from-literal=admin-password='${{ secrets.GRAFANA_PASSWORD }}' \
               -n monitoring \
-              --dry-run=client -o yaml | kubectl apply -f -
+              --dry-run=client -o yaml | kubectl apply -f - #
 
-            # 4. Root Application 등록
+            # 4. Root Application 등록 (GitOps 시작점)
             echo "📂 Applying Root Application..."
-            # 변수를 활용하여 현재 리포지토리의 master 브랜치에서 root-app.yaml을 가져옵니다.
-            REPO_OWNER=$(echo "${{ github.repository }}" | cut -d'/' -f1)
-            REPO_NAME=$(echo "${{ github.repository }}" | cut -d'/' -f2)
+            REPO_OWNER=$(echo "${{ github.repository }}" | cut -d'/' -f1) #
+            REPO_NAME=$(echo "${{ github.repository }}" | cut -d'/' -f2) #
             
-            curl -s https://raw.githubusercontent.com/${REPO_OWNER}/${REPO_NAME}/master/argocd/root-app.yaml | kubectl apply -f -
+            #의 설정을 기반으로 전체 매니페스트 감시 시작
+            curl -s https://raw.githubusercontent.com/${REPO_OWNER}/${REPO_NAME}/master/argocd/root-app.yaml | kubectl apply -f - #
 
             echo "✅ ArgoCD Setup & Root App Registration Complete!"
